<?xml version="1.0"?>
<package format="3">
  <name>rahcm</name>
  <version>0.0.0</version>
  <description>Pacote do robô Chico para ROS 2</description>
  <maintainer email="seu_email@example.com">Seu Nome</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
