<?xml version="1.0"?>
<package format="3">
  <name>laser_rahcm_visualization</name>
  <version>0.0.0</version>
  <description>Pacote de visualização do robô Chico Mendes no ROS 2</description>
  <maintainer email="seu_email@example.com">Alysson Martim</maintainer>
  <license>Apache-2.0</license>

  <!-- Ferramenta de build -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependências em tempo de build e runtime -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>position_controllers</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>laser_rahcm_simulation</depend>
  <depend>joint_state_broadcaster</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
